objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>General Sales Process</fullName>
        <description>The general sales process for opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiating</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Counselor_Stage__c</fullName>
        <formula>TEXT(Account.Counselor_Selling_Stage__c)</formula>
        <label>Account Counselor Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Location__c</fullName>
        <formula>Account.BillingCity&amp;&quot;, &quot;&amp; Account.BillingState</formula>
        <label>Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Activity_Rpt__c</fullName>
        <formula>if(Not(Contains($User.Profile_Current__c ,&quot;Partner&quot;)), 
HYPERLINK(&quot;/00Oj0000004JIKI?pv0=&quot;&amp;Account.Id,&quot;Activity Rpt (Last 30 Days)&quot;,&quot;_self&quot;), 
HYPERLINK(&quot;/partnercommunity/00Oj0000004JIKI?pv0=&quot;&amp;Account.Id,&quot;Activity Rpt (Last 30 Days)&quot;,&quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Activity Rpt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Indicator__c</fullName>
        <description>Is there at least one activity for this Opportunity?</description>
        <label>Activity Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Animal_Type_Category__c</fullName>
        <description>Used for Partner Community.</description>
        <formula>If( RecordType.Name =&quot;General Opportunity&quot;,text( Species__c ),
If( RecordType.Name=&quot;Agronomy Opportunity&quot;,text(Category__c),
&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Animal Type/Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Points_Adjusted__c</fullName>
        <description>If the Annual Points Override field is populated, use the Annual Points Override, else use the Annual Points</description>
        <formula>If(IsBlank(Annual_Points_Override__c),  Annual_Points__c ,Annual_Points_Override__c)</formula>
        <label>Annual Points Adjusted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Points_Override__c</fullName>
        <inlineHelpText>The &quot;Annual Points Override&quot; will not appear in reporting at this time.</inlineHelpText>
        <label>Annual Points Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Points_Reporting__c</fullName>
        <description>Formula to calculate Annual Points</description>
        <formula>If(IsBlank(Annual_Points_Override__c),  Annual_Points__c ,Annual_Points_Override__c)</formula>
        <label>Annual Points (Reporting)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Points__c</fullName>
        <label>Annual Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Tons__c</fullName>
        <label>Annual Tons</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anticipated_Close_Date_7_Days__c</fullName>
        <formula>CloseDate + 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anticipated Close Date + 7 Days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_Sales_Manager__c</fullName>
        <formula>Text(Owner.Area_Sales_Manager__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Type__c</fullName>
        <description>Category Type for agronomy picklists</description>
        <label>Category Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Category_Type_Agronomy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category for agronomy opportunities</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Category_for_Agronomy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Date_Year__c</fullName>
        <formula>Text(Year( CloseDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date (Year)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date_in_Future_Open_Oppty__c</fullName>
        <description>The close date is in the past an the stage is open.</description>
        <formula>if( CloseDate   &gt;=  Today()&amp;&amp;  Open_Count__c =1,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open || Close Date Future || Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Annual_Points__c</fullName>
        <formula>if(text(StageName)=&quot;Closed Lost&quot;, Annual_Points__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Lost Annual Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Count__c</fullName>
        <description>Count of &quot;Closed Lost&quot; opportunities.</description>
        <formula>if(text(StageName)=&quot;Closed Lost&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Lost Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Curr_Yr_Count__c</fullName>
        <formula>If( 
AND( 
text(StageName) = &quot;Closed Lost&quot;, 
Year(CloseDate) = Year(today())), 
1 ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Lost || Curr Yr || Count</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Curr_Yr_Points__c</fullName>
        <formula>If( 
AND( 
text(StageName) = &quot;Closed Lost&quot;, 
Year(CloseDate) = Year(today())), 
Closed_Lost_Annual_Points__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Lost || Curr Yr || Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Annual_Points__c</fullName>
        <formula>if(text(StageName)=&quot;Closed Won&quot;, Annual_Points__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Won Annual Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Count__c</fullName>
        <description>Count of Closed Won opportunities.</description>
        <formula>if(text(StageName)=&quot;Closed Won&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Won Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Curr_Yr_Count__c</fullName>
        <formula>If(
AND(
text(StageName) = &quot;Closed Won&quot;,
Year(CloseDate) = Year(today())),
1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Won || Curr Yr || Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Curr_Yr_Points__c</fullName>
        <formula>If( 
AND( 
text(StageName) = &quot;Closed Won&quot;, 
Year(CloseDate) = Year(today())), 
  Closed_Won_Annual_Points__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Won || Curr Yr || Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Stage_is_Moved_to_Closed_Won__c</fullName>
        <description>Date the opportunity is moved to Closed Won.</description>
        <label>Date Stage is Moved to &quot;Closed Won&quot;</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Involved__c</fullName>
        <label>Dealer Involved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_User_Focus_Opportunity_2017__c</fullName>
        <defaultValue>false</defaultValue>
        <description>End User Focus Oppty for 2017</description>
        <label>End User Focus Opportunity (2017)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_User_Focus_Points_for_2017__c</fullName>
        <description>Used to calculate points for the End User Focus Initiative.</description>
        <formula>If(And(Key_Opportunity__c,Text(StageName) = &quot;Closed Won&quot;,Year(CloseDate)= 2017,Month(CloseDate)= 4),8  *  (Annual_Points_Reporting__c /12), 
If(And(Key_Opportunity__c,Text(StageName) = &quot;Closed Won&quot;,Year(CloseDate)= 2017,Month(CloseDate)= 5),7  *  (Annual_Points_Reporting__c /12), 
If(And(Key_Opportunity__c,Text(StageName) = &quot;Closed Won&quot;,Year(CloseDate)= 2017,Month(CloseDate)= 6),6  *  (Annual_Points_Reporting__c /12), 
If(And(Key_Opportunity__c,Text(StageName) = &quot;Closed Won&quot;,Year(CloseDate)= 2017,Month(CloseDate)= 7),5  *  (Annual_Points_Reporting__c /12), 
If(And(Key_Opportunity__c,Text(StageName) = &quot;Closed Won&quot;,Year(CloseDate)= 2017,Month(CloseDate)= 8),4  *  (Annual_Points_Reporting__c /12), 
If(And(Key_Opportunity__c,Text(StageName) = &quot;Closed Won&quot;,Year(CloseDate)= 2017,Month(CloseDate)= 9),3  *  (Annual_Points_Reporting__c /12), 
If(And(Key_Opportunity__c,Text(StageName) = &quot;Closed Won&quot;,Year(CloseDate)= 2017,Month(CloseDate)= 10),2 *  (Annual_Points_Reporting__c /12), 
If(And(Key_Opportunity__c,Text(StageName) = &quot;Closed Won&quot;,Year(CloseDate)= 2017,Month(CloseDate)= 11),1 *  (Annual_Points_Reporting__c /12), 
0))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Focus Points for 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Name_Date__c</fullName>
        <formula>Campaign.Name &amp;&quot;-&quot;&amp; Text( Campaign.Date_of_Event__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name &amp; Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_VIP_Registration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Farm vip registration -- related list on farm vip registration object.</description>
        <label>Farm VIP Registration</label>
        <referenceTo>Farm_VIP_Registration__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <description>Initiative</description>
        <label>Initiative</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equine Vet Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify key opportunities.</description>
        <label>Key Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Created_By__c</fullName>
        <description>Who created the lead this opportunity was created from.</description>
        <label>Lead Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Reviewed_By__c</fullName>
        <formula>if(isblank(Text(Opportunity_Converted_From_Lead__c)),&quot;N/A&quot;,
If(isblank(Lead_Reviewer__c ),CreatedBy.Full_Name__c,Lead_Reviewer__r.Full_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Reviewed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Reviewer_Comments__c</fullName>
        <description>The Lead Reviewer Comments are mapped over from the lead.</description>
        <label>Lead Reviewer Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lead_Reviewer_Count__c</fullName>
        <formula>If(
isblank( Lead_Reviewer__c ),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Reviewer Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Lead Reviewer who reviewed the lead -- mapped over from the lead object.</description>
        <label>Lead Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Life_Stage__c</fullName>
        <label>Lifestage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Species__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aqua</fullName>
                </value>
                <value>
                    <fullName>Back Grounder</fullName>
                </value>
                <value>
                    <fullName>Boarding Kennel</fullName>
                </value>
                <value>
                    <fullName>Breeder Operation</fullName>
                </value>
                <value>
                    <fullName>Breeding Stallion</fullName>
                </value>
                <value>
                    <fullName>Broilers</fullName>
                </value>
                <value>
                    <fullName>Brood Mares</fullName>
                </value>
                <value>
                    <fullName>Caged Bird</fullName>
                </value>
                <value>
                    <fullName>Calf Milk Replacer</fullName>
                </value>
                <value>
                    <fullName>Cattle</fullName>
                </value>
                <value>
                    <fullName>Commercial Cow</fullName>
                </value>
                <value>
                    <fullName>Deer-Elk</fullName>
                </value>
                <value>
                    <fullName>Duck/Goose</fullName>
                </value>
                <value>
                    <fullName>Exotics</fullName>
                </value>
                <value>
                    <fullName>Family Flock</fullName>
                </value>
                <value>
                    <fullName>Fed Cattle</fullName>
                </value>
                <value>
                    <fullName>Foals</fullName>
                </value>
                <value>
                    <fullName>Free Range Property</fullName>
                </value>
                <value>
                    <fullName>Game Birds</fullName>
                </value>
                <value>
                    <fullName>Goat</fullName>
                </value>
                <value>
                    <fullName>Grower</fullName>
                </value>
                <value>
                    <fullName>Grower Finish</fullName>
                </value>
                <value>
                    <fullName>Heifer</fullName>
                </value>
                <value>
                    <fullName>Hogs</fullName>
                </value>
                <value>
                    <fullName>Hunting Preserve</fullName>
                </value>
                <value>
                    <fullName>Lactation</fullName>
                </value>
                <value>
                    <fullName>Layers</fullName>
                </value>
                <value>
                    <fullName>Nursery</fullName>
                </value>
                <value>
                    <fullName>PB Cow Bull</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lifestage_Category_Type__c</fullName>
        <description>Used for the Partner Community.</description>
        <formula>If( RecordType.Name =&quot;General Opportunity&quot;,text( Life_Stage__c ),
If( RecordType.Name =&quot;Agronomy Opportunity&quot;,text(Category_Type__c),
&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lifestage/Category Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Opportunity_Indicator__c</fullName>
        <formula>If( $User.X18_Digit_User_ID__c =  Owner.X18_Digit_User_ID__c , &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Opportunity Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Annual_Points__c</fullName>
        <formula>case(StageName,&quot;Closed Won&quot;,0,&quot;Closed Lost&quot;,0,Annual_Points__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Annual Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Close_Date_Future_Points__c</fullName>
        <formula>if( CloseDate   &gt;=  Today()&amp;&amp;  Open_Count__c =1, Open_Annual_Points__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open || Close Date Future || Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Close_Date_Past_Points__c</fullName>
        <formula>if( CloseDate &lt; Today()&amp;&amp; Open_Count__c =1, Open_Annual_Points__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open || Close Date Past || Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Closed_Date_Past_Count__c</fullName>
        <description>The close date is in the past for open opportunities</description>
        <formula>if( CloseDate   &lt;  Today()&amp;&amp;  Open_Count__c =1,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open || Close Date Past || Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Count__c</fullName>
        <description>Count of Open opportunities.</description>
        <formula>case(StageName,&quot;Closed Won&quot;,0,&quot;Closed Lost&quot;,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open  Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Converted_From_Lead__c</fullName>
        <description>Indicates whether this opportunity was converted from a lead.  This is updated via the lead mapping,</description>
        <label>Opportunity Converted from a Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <formula>If(ISBlank( OwnerId ),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Manager_is_Me__c</fullName>
        <description>If the Opportunity Owner&apos;s Manager is me, then &quot;Yes&quot; or &quot;No&quot;.</description>
        <formula>If( 
$User.X18_Digit_User_ID__c = Owner.Manager.X18_Digit_User_ID__c ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Manager is Me</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_is_Me__c</fullName>
        <description>If the Opportunity owner is me, then &quot;Yes&quot;, &quot;No&quot;.</description>
        <formula>if( $User.X18_Digit_User_ID__c =  Owner.X18_Digit_User_ID__c ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner is Me</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type2__c</fullName>
        <description>Partner users are not seeing the the Opportunity Record Type, so this formula field was created so they could do so and this field is being used in partner report filters.</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <description>Identified the stage of an opportunity.  If open, is the stage &quot;Open Past Due&quot; or &quot;Open&quot;.</description>
        <formula>If(text(StageName) =&quot;Prospecting&quot; &amp;&amp; CloseDate &lt; Today(),&quot;Open || Close Date Past&quot;,
If(text(StageName) =&quot;Prospecting&quot; &amp;&amp; CloseDate  &gt;= Today(),&quot;Open || Close Date Future&quot;,
If(text(StageName) =&quot;Negotiating&quot; &amp;&amp; CloseDate &lt; Today(),&quot;Open || Close Date Past&quot;,
If(text(StageName) =&quot;Negotiating&quot; &amp;&amp; CloseDate  &gt;= Today(),&quot;Open || Close Date Future&quot;,
If(text(StageName) =&quot;Closed Lost&quot;,&quot;Closed Lost&quot;,
If(text(StageName) =&quot;Closed Won&quot;, &quot;Closed Won&quot;,
&quot;NA&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason_Lost__c</fullName>
        <description>If user indicates that Reason Lost is Other, then this field should be filled out</description>
        <label>Other Reason Lost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Sales_Team_ID__c</fullName>
        <description>Opportunity owner&apos;s Sales Team ID</description>
        <formula>Owner.Sales_Team_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Sales Team ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Status__c</fullName>
        <formula>Owner.Status_Current__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_60_Days_Ago_Y_N__c</fullName>
        <description>If the primary campaign end date was 60 days from today, then &quot;Yes&quot;, &quot;No&quot;</description>
        <formula>If(Campaign.EndDate&lt; Today() - 60, &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Campaign 60 Days Ago (Y/N)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Curr_Year_Ind__c</fullName>
        <formula>If(Year(Campaign.Date_of_Event__c ) = Year(Today()),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Campaign Curr Year Ind</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_End_Date__c</fullName>
        <formula>Campaign.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Ended_within_60_Days__c</fullName>
        <formula>If(Campaign.EndDate &gt;=  Today() - 60, &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Campaign Ended within 60 Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_FARM_VIP_Indicator__c</fullName>
        <formula>If (Campaign.RecordType.Name = &quot;Farm VIP Event&quot;,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Campaign FARM VIP Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Name__c</fullName>
        <formula>Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Prev_Year_Ind__c</fullName>
        <formula>If (Year(Campaign.Date_of_Event__c )= Year(Today())-1,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Campaign Prev Year Ind</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Customer_Event_ID__c</fullName>
        <formula>Campaign.X18_Digit_Customer_Event_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Customer Event ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <description>Field for user to indicate why the opportunity was lost. This field must be filled out if the Opportunity is marked as &quot;Closed Lost&quot;</description>
        <label>Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Division_Indicator__c</fullName>
        <formula>If( text( Owner.Sales_Division__c )= text($User.Sales_Division__c) ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Division Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Division__c</fullName>
        <formula>text(Owner.Sales_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Specialist_and_or_LPS_Team__c</fullName>
        <formula>If (
And(
text(Owner.Function__c  )= &quot;LPS&quot;, 
Owner.Manager_s_Function__c = &quot;Sales Specialist&quot;),
Owner.Manager.Full_Name__c , Owner.Full_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Specialist and LPS Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Generated_Lead__c</fullName>
        <description>If this opportunity is the result of a converted lead and the lead reviewer is the same person who created the opportunity, then &quot;yes&quot; this lead was &quot;self-generated&quot; by the user vs. being qualified by Inside Sales for the user.</description>
        <formula>If(
and(
Lead_Reviewed_By__c =  Lead_Created_By__c , 
text(Opportunity_Converted_From_Lead__c) = &quot;Yes&quot;),
&quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Self Generated Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <label>Animal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cattle</fullName>
                </value>
                <value>
                    <fullName>Companion</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Deer</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Non-Animal Opportunity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pet</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Swine</fullName>
                </value>
                <value>
                    <fullName>Bee Colonies</fullName>
                </value>
                <value>
                    <fullName>Equine</fullName>
                    <isActive>false</isActive>
                    <label>Equine</label>
                </value>
                <value>
                    <fullName>Exotic</fullName>
                    <isActive>false</isActive>
                    <label>Exotic</label>
                </value>
                <value>
                    <fullName>Wildlife</fullName>
                    <isActive>false</isActive>
                    <label>Wildlife</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_Text__c</fullName>
        <description>Converts the stage picklist value into a text value.</description>
        <label>Stage (Text)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_20_Prospect_Count__c</fullName>
        <formula>if(And( 
text(Year( CloseDate )) = text(Year(today())), 
Key_Opportunity__c = True), 
1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top 20 Prospect Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top_20_Prospect_Opportunity__c</fullName>
        <description>If the Key Opportunity checkbox is checked and the close date is in the current year, then &quot;Yes&quot; else &quot;No&quot;.</description>
        <formula>if(And( 
text(Year( CloseDate )) = text(Year(today())), 
Key_Opportunity__c = True), 
&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Top 20 Prospect indicator is &quot;Yes&quot; when the Key Opportunity field is checked and the Close Date occurs during the current year.</inlineHelpText>
        <label>Top 20 Prospect Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Head_Units__c</fullName>
        <description>Used for the Partner Community</description>
        <formula>If( RecordType.Name =&quot;General Opportunity&quot;,Total_Head__c,
If( RecordType.Name =&quot;Agronomy Opportunity&quot;,Units__c,
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Head/Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Head__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What is the number of total head for this opportunity?</description>
        <label>Total Head</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>